@@ -19,26 +19,22 @@ package com.maddyhome.idea.vim.ui;
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
+import com.intellij.openapi.actionSystem.DataConstants;
 import com.intellij.openapi.actionSystem.DataContext;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Editor;
+import com.intellij.openapi.project.Project;
+import com.maddyhome.idea.vim.VimPlugin;
+
 import java.awt.Color;
 import java.awt.Component;
-import java.awt.Container;
 import java.awt.Font;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.KeyboardFocusManager;
-import java.awt.Point;
-import java.awt.Rectangle;
-import java.awt.event.ComponentAdapter;
-import java.awt.event.ComponentEvent;
 import javax.swing.BorderFactory;
-import javax.swing.JComponent;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
-import javax.swing.JRootPane;
-import javax.swing.JScrollPane;
 import javax.swing.KeyStroke;
 import javax.swing.SwingUtilities;
 
@@ -90,6 +86,7 @@ public class ExEntryPanel extends JPanel
         add(entry);
         setBorder(BorderFactory.createLineBorder(Color.BLACK));
 
+        /*
         newGlass = new CommandEntryGlass();
         newGlass.add(this);
         newGlass.addComponentListener(new ComponentAdapter() {
@@ -98,6 +95,7 @@ public class ExEntryPanel extends JPanel
                 positionPanel();
             }
         });
+        */
     }
 
     /**
@@ -125,7 +123,14 @@ public class ExEntryPanel extends JPanel
         //positionPanel();
 
         //newGlass.setVisible(true);
-        entry.requestFocus();
+        SwingUtilities.invokeLater(new Runnable() {
+            public void run()
+            {
+                VimPlugin.showToolWindow((Project)entry.getContext().getData(DataConstants.PROJECT));
+                entry.requestFocus();
+            }
+        });
+
         active = true;
     }
 
@@ -156,6 +161,7 @@ public class ExEntryPanel extends JPanel
         entry.handleKey(stroke);
     }
 
+    /*
     private void positionPanel()
     {
         if (parent == null) return;
@@ -170,6 +176,7 @@ public class ExEntryPanel extends JPanel
         setBounds(bounds);
         repaint();
     }
+    */
 
     /**
      * Gets the text entered by the user. This includes any initial text but does not include the label
@@ -202,13 +209,16 @@ public class ExEntryPanel extends JPanel
             SwingUtilities.invokeLater(new Runnable() {
                 public void run()
                 {
+                    VimPlugin.hideToolWindow((Project)entry.getContext().getData(DataConstants.PROJECT));
+
                     //parent.requestFocus();
                     last.requestFocus();
                     //entry.getEditor().getComponent().requestFocus();
                 }
             });
         }
-        parent = null;
+
+        //parent = null;
     }
 
     /**
@@ -229,12 +239,12 @@ public class ExEntryPanel extends JPanel
         }
     }
 
-    private JComponent parent;
+    //private JComponent parent;
     private JLabel label;
     private ExTextField entry;
-    private JPanel newGlass;
-    private Component oldGlass;
-    private JRootPane root;
+    //private JPanel newGlass;
+    //private Component oldGlass;
+    //private JRootPane root;
     private int count;
     private Component last;
 
