@@ -4,6 +4,8 @@ History of changes for @NAME@ for IDEA @IDEA-VERSION@
 
 Bug Fixes
 - Fixed c<motion and d<motion> exception if the motion was invalid.
+- The use of : and / commands now uses a different type of window for text
+  entry. This fixes the focus problem that has existed since Idea 4.0.
 
 0.7.0 to 0.7.1
 
